very small version: 0.0.2

--- a/samples/kill-bubble/release/test/balls.html
+++ b/samples/kill-bubble/release/test/balls.html
@@ -3,9 +3,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
-    <title>Shoot'em Up</title>
+    <title>Kill the bubble</title>
     
-    <meta name="description" content="A little shmup">
+    <meta name="description" content="A little game, kill bubbles">
     <meta name="keywords" content="">
     <meta name="author" content="Dreamirl">
     <meta name="viewport" 
