--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html style="margin: 0;">
   <head>
     <title>Stress test</title>
     <link href="css/1.style.css" rel="stylesheet" type="text/css" />
@@ -20,7 +20,7 @@
     <link rel="apple-touch-startup-image" href="img/128x128.png" />
     
   </head>
-    <body>
+    <body style="margin:0;overflow: hidden;">
       <div id="render"></div>
       <script type="text/javascript" src="node_modules/requirejs/require.js" data-main="js/game1/main"></script>
     </body>
