--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
     <body style="margin:0;overflow: hidden;">
       <div id="render"></div>
+      <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
       <script type="text/javascript" src="node_modules/requirejs/require.js" data-main="js/game1/main"></script>
     </body>
 </html>
